# fourier-practicum

./: README.md
Programmeren Eindfeest/: pyproject.toml
Programmeren Eindfeest/Eindfeest/src/eindfeest/: user_interface.py
Programmeren Eindfeest/Eindfeest_practicum2/: README.md
fourier map/: data_analyse.py  experiment.py  fourier.py  good_fourier.py  view.py
