[tool.poetry]
name = "eindfeest"
version = "0.1.0"
description = ""
authors = ["SamSiderius <sam.siderius@gmail.com>"]
readme = "README.md"
packages = [{include = "eindfeest", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
